--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.ifunsoedmobile">
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -11,18 +14,25 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.IFUnsoedMobile">
+
         <activity
-            android:name=".Halaman2Activity"
-            android:exported="false" />
-        <activity
-            android:name=".MainActivity"
-            android:exported="true">
+            android:name="com.example.ifunsoedmobile.DaftarBukuActivity"
+            android:exported="true"
+            android:theme="@style/Theme.IFUnsoedMobile"> <!-- TEMA SPLASH SCREEN DITAMBAHKAN DI SINI -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".MainActivity"
+            android:exported="true" /> <!-- TEMA SPLASH SCREEN DIHAPUS DARI SINI -->
+
+        <activity
+            android:name=".Halaman2Activity"
+            android:exported="false" />
+
     </application>
 
 </manifest>
